--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta http-equiv="Cache-Control" CONTENT="no-cache">
   <title>我的博客测试</title>
+  <link rel="stylesheet" type="text/css" href="./static/css/test.css">
 </head>
 <body>
   <div id ="app">
     放松的方式打发 发送到
+    <script src="./static/js/test.js"></script>
   </div>
 </body>
 </html>
